// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphHelpers getChartDomain should return expected y domain for given inputs 1`] = `
Object {
  "empty array": Array [
    0,
    10,
  ],
  "maxY = 0": Array [
    0,
    10,
  ],
  "maxY = 100": Array [
    0,
    1000,
  ],
  "maxY = 1000": Array [
    0,
    10000,
  ],
  "maxY = 49": Array [
    0,
    50,
  ],
  "maxY = 50": Array [
    0,
    100,
  ],
  "maxY = 9": Array [
    0,
    10,
  ],
}
`;

exports[`GraphHelpers should convert graph data and generate tooltips when usage is populated: usage populated 1`] = `
Object {
  "chartData": Array [
    Object {
      "label": "5 sockets on Jun 1",
      "x": "Jun 1",
      "y": 5,
    },
    Object {
      "label": "7 sockets on Jun 2
 +2 from previous day",
      "x": "Jun 2",
      "y": 7,
    },
    Object {
      "label": "3 sockets on Jun 3
 -4 from previous day",
      "x": "Jun 3",
      "y": 3,
    },
    Object {
      "label": "0 sockets on Jun 4
 -3 from previous day",
      "x": "Jun 4",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 5",
      "x": "Jun 5",
      "y": 0,
    },
  ],
  "chartDomain": Object {
    "x": Array [
      0,
      31,
    ],
    "y": Array [
      0,
      10,
    ],
  },
  "tickValues": Array [
    "Jun 1",
  ],
}
`;

exports[`GraphHelpers should convert graph data and return zeroed usage array if error: error is true 1`] = `
Object {
  "chartData": Array [
    Object {
      "x": "Jun 1",
      "y": 0,
    },
    Object {
      "x": "Jun 2",
      "y": 0,
    },
    Object {
      "x": "Jun 3",
      "y": 0,
    },
    Object {
      "x": "Jun 4",
      "y": 0,
    },
    Object {
      "x": "Jun 5",
      "y": 0,
    },
  ],
  "chartDomain": Object {
    "x": Array [
      0,
      31,
    ],
    "y": Array [
      0,
      10,
    ],
  },
  "tickValues": Array [
    "Jun 1",
  ],
}
`;

exports[`GraphHelpers should convert graph data and return zeroed usage array if usage is empty: zeroed array 1`] = `
Object {
  "chartData": Array [
    Object {
      "x": "Jun 1",
      "y": 0,
    },
    Object {
      "x": "Jun 2",
      "y": 0,
    },
    Object {
      "x": "Jun 3",
      "y": 0,
    },
    Object {
      "x": "Jun 4",
      "y": 0,
    },
    Object {
      "x": "Jun 5",
      "y": 0,
    },
  ],
  "chartDomain": Object {
    "x": Array [
      0,
      31,
    ],
    "y": Array [
      0,
      10,
    ],
  },
  "tickValues": Array [
    "Jun 1",
  ],
}
`;

exports[`GraphHelpers should convert graph data and returned zeroed array when usage throws error: throws error 1`] = `
Object {
  "chartData": Array [
    Object {
      "x": "Jun 1",
      "y": 0,
    },
    Object {
      "x": "Jun 2",
      "y": 0,
    },
    Object {
      "x": "Jun 3",
      "y": 0,
    },
    Object {
      "x": "Jun 4",
      "y": 0,
    },
    Object {
      "x": "Jun 5",
      "y": 0,
    },
  ],
  "chartDomain": Object {
    "x": Array [
      0,
      31,
    ],
    "y": Array [
      0,
      10,
    ],
  },
  "tickValues": Array [
    "Jun 1",
  ],
}
`;

exports[`GraphHelpers should get tick values array given chart data 1`] = `
Object {
  "empty array": Array [],
  "x axis interval": Array [
    "Jan 1",
    "Jan 3",
    "Jan 5",
  ],
}
`;

exports[`GraphHelpers should have specific functions: graphHelpers 1`] = `
Object {
  "chartDateFormat": "MMM D",
  "convertGraphUsageData": [Function],
  "getChartDomain": [Function],
  "getTickValues": [Function],
  "zeroedUsageData": [Function],
}
`;
